# legal-ai-data-governance-eval-harness

./: .env.example  .gitignore  README.md  config.practice_api_smoke.yaml  config.practice_pilot.yaml  config.qianfan_product_boundary_api_smoke.yaml  config.qianfan_product_boundary_eval.yaml  config.qianfan_product_boundary_runnable.yaml  config.qianfan_rag_v2_focused.yaml  config.qianfan_vendors_smoke.yaml  config.yaml  dataset_manifest.yaml  pyproject.toml  requirements.txt
data/: Legal_AI_Data_Governance_Eval_Harness_40_Core.xlsx  eval_input.csv  gold_labels.csv  rubric_items.csv  sample_metadata.csv
docs/: a5_multiturn_pilot_results.md  a5_multiturn_smoke_results.md  annotation_guideline.md  asset_lifecycle_v1.md  experiment_design.md  flywheel_v0.1_runbook.md  flywheel_v0.2_independent_regression.md  git_upload_guide.md  interview_pitch_zh.md  interview_talk_track.md  legal_agent_product_eval_v2_design.md  methodology_risk_register.md  model_boundary_memo.md  multiturn_intake_pilot.md  portfolio_case_study.md  portfolio_positioning_zh.md  project_summary.md  rag_v2_focused_results.md  rag_v2_improvement_plan.md  release_gate.md  results_practice_api_smoke.md  results_product_boundary_eval.md  results_qianfan_vendors_smoke.md  resume_pitch.md  runbook.md  stratified_legal_eval_design.md
outputs/: executive_dashboard.xlsx
prompts/: judge_case_analysis.txt  judge_consultation.txt  judge_document_drafting.txt  v0_direct_answer.txt  v1_answer_protocol.txt  v2_blind_review_agent.txt  v3_workflow_agent.txt  v4_grounded_answer.txt  v5_clarification_first.txt
(+89 files in other folders)
